# agent

./: .gitignore  README.md  pyproject.toml
agent/: app.py  chatbot.py  database.py  vector_db.py
chatbot/: _chatbot.py  app.py  app_gradio.py  app_gradio_2.py  app_terminal.py  app_terminal_stream.py  client.py  config.py  gradio_app.py  mocks.py  multiagent.py  tools.py
chatbot/agent/: base.py  combined.py  mock_multiagent.py  multiagent.py  primary.py  search.py
chatbot/agents/: all_in_one.py  all_multiagent.py  it.py  jira.py
chatbot/architecture/: _clarify.py  base.py  clarify.py  multiagent.py  react.py
chatbot/database/: data_db.py  session_data_db.py  session_db.py  vector_db.py
